--- a/react-project/src/index.css
+++ b/react-project/src/index.css
@@ -1,8 +1,8 @@
 body {
 
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: safe center;
+  overflow-y: auto;
   margin:0;
   margin-top: 0;
   flex-direction: column;
