--- a/CalendarApp/CalendarApp/Pages/Index.cshtml
+++ b/CalendarApp/CalendarApp/Pages/Index.cshtml
@@ -4,49 +4,72 @@
 }
 <div class="container ">
 
-
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <div class="row">
+        <div class="col-md-12">
+            <table class="table">
+                <tr>
                     @for (int i = 0; i < Model.Months.Count; i++)
                     {
-                        <li class="nav-item">
-                            <a class="nav-link active btn" aria-current="page" asp-for="/Index" asp-route-nxt=@i>@Model.Months[i]</a>
-                        </li>
+                        <td style="width:5%;">
+                            <a class="" aria-current="page" asp-for="/Index" asp-route-nxt=@i>@Model.Months[i]</a>
+                        </td>
                     }
-                </ul>
-            </div>
+                </tr>
+            </table>
         </div>
-    </nav>
+    </div>
+
 
     <div class="row">
-        <div class="col-8">
-            @for (int i = 0; i < Model.CurrentDays.Count; i++)
-            {
-                @if (i % 7 == 0)
+        <div class="col-md-12">
+            <table class="table">
+                @for (int i = 0; i < Model.CurrentDays.Count; i++)
                 {
-                    <ul class="list-group list-group-horizontal">
-                        @for (int j = 0; j < 7; j++)
-                        {
-                            @if (i + j < Model.CurrentDays.Count)
+                    @if (i % 7 == 0)
+                    {
+                        <tr>
+                            @for (int j = 0; j < 7; j++)
                             {
-                        <li class="list-group-item px-lg-6">
-                                <h6>@Model.CurrentDays[i + j].Flag</h6>
-                            
-                            <p>@Model.CurrentDays[i + j].CurrentDate.DayOfWeek</p>
-                            <a asp-page="/Edit" asp-route-id="@Model.CurrentDays[i+j].ID">@Model.CurrentDays[i + j].CurrentDate.ToString("dd MMMM")</a>
-                        </li>
-                            }
-                        }
-                    </ul>
-                }
+                                @if (i + j < Model.CurrentDays.Count)
+                                {
+                                    <td style="border:1px solid black !important;width:10%;">
 
-            }
+
+
+                                        <p>@Model.CurrentDays[i + j].CurrentDate.DayOfWeek</p>
+                                        <a asp-page="/Edit" asp-route-id="@Model.CurrentDays[i+j].ID">@Model.CurrentDays[i + j].CurrentDate.ToString("dd MMMM")</a>
+                                        <br />
+
+                                            <span style="color:red">@Model.CurrentDays[i+j].Flag</span>
+                                        
+                                    </td>
+                                }
+                            }
+                        </tr>
+                        @*<ul class="list-group list-group-horizontal">*@
+
+                        @*</ul>*@
+                    }
+
+                }
+            </table>
+
+
         </div>
-        <div class="col-4" >
-            <h4>Activity</h4>
+
+
+        @section Scripts {
+            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        }
+    </div>
+
+    <hr />
+
+    <div class="row">
+        <div class="col-md-3"></div>
+
+        <div class="col-md-6">
+            <h4>Add an activity</h4>
             <hr />
             <div class="row">
                 <div class="col">
@@ -54,37 +77,26 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
                             <label asp-for="Activity.Title" class="control-label"></label>
-                            <input asp-for="Activity.Title" class="form-control" />
+                            <input asp-for="Activity.Title" class="form-control form-control-sm" />
                             <span asp-validation-for="Activity.Title" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Activity.Details" class="control-label"></label>
-                            <input asp-for="Activity.Details" class="form-control" />
+                            <input asp-for="Activity.Details" class="form-control form-control-sm" />
                             <span asp-validation-for="Activity.Details" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Activity.TimeAt" class="control-label"></label>
-                            <input asp-for="Activity.TimeAt" class="form-control" />
+                            <label asp-for="Activity.TimeAt" class="control-label">Time</label>
+                            <input asp-for="Activity.TimeAt" class="form-control form-control-sm" />
                             <span asp-validation-for="Activity.TimeAt" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group text-right">
                             <input type="submit" value="Add" class="btn btn-primary" />
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-
-        @section Scripts {
-            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-        }
+        <div class="col-md-3"></div>
     </div>
-
-
-
-
-
-
-
-
 </div>
